# MMU-RAG-competition

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yml  dev.ipynb  local_test.py  paper.tex  pyproject.toml  run.sh  start.sh
Text-to-Video/: submission_starter_video.py
scripts/: test_gemini_client.py  test_grounded_generation.py  test_integration.py  test_pipeline_grounded.py  test_retry_logic.py  test_search_chunking.py  validate_grounding_metadata.py
specs/002-structured-report-generation/: architecture.md  plan.md  spec.md
src/: __init__.py  chunker.py  cleaner.py  context_manager.py  gemini_client.py  generator.py  indexer.py  loader.py  pipeline.py  quality_validator.py  report_assembler.py  report_structure.py  retriever.py  section_generator.py  structure_generator.py  tokenizer.py
