[project]
name = "mmu-rag-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "async-generator>=1.10",
    "boto3>=1.40.44",
    "fastapi[standard]>=0.118.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "loguru>=0.7.3",
    "openai>=1.0.0",
    "python-dotenv>=1.1.1",
    "sglang[all]>=0.5.3rc0",
    "uvicorn>=0.37.0",
]
